--- a/app/src/main/res/layout/news_comment_item.xml
+++ b/app/src/main/res/layout/news_comment_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ywwxhz.hoder.NewsCommentItemHoderView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ywwxhz.hoderview.NewsCommentItemHoderView xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:layout_width="fill_parent"
                                            android:layout_height="fill_parent"
                                            android:background="@drawable/list_item_background"
@@ -122,4 +122,4 @@
         android:layout_toLeftOf="@+id/comment_reason"
         android:layout_toStartOf="@+id/comment_reason"
         android:layout_marginRight="4dp"/>
-</com.ywwxhz.hoder.NewsCommentItemHoderView>
+</com.ywwxhz.hoderview.NewsCommentItemHoderView>
