--- a/app/src/main/res/drawable/ic_more.xml
+++ b/app/src/main/res/drawable/ic_more.xml
@@ -3,5 +3,5 @@
     <item android:drawable="@mipmap/ic_more_black" android:state_activated="true" />
     <item android:drawable="@mipmap/ic_more_black" android:state_pressed="true" />
     <item android:drawable="@mipmap/ic_more_black" android:state_selected="true" />
-    <item android:drawable="@mipmap/ic_more_light" />
+    <item android:drawable="@mipmap/ic_more_light1" />
 </selector>
