change ui style from Holo Design to Material Design add 人气推荐 add 精彩评论 add 收藏列表 fix PagedLoader bug fix build.gradle error

--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -1,4 +1,4 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
@@ -41,4 +41,4 @@
         app:fab_colorPressed="@color/color_passed"
         app:fab_shadow="true"/>
 
-</merge>
+</FrameLayout>
