--- a/app/src/main/res/values/styles_basic.xml
+++ b/app/src/main/res/values/styles_basic.xml
@@ -10,6 +10,7 @@
         <item name="colorPrimary">@color/toolbarColor</item>
         <item name="colorPrimaryDark">@color/statusColor</item>
         <item name="actionModeBackground">@color/toolbarColor</item>
+        <item name="android:windowContentOverlay">@null</item>
         <item name="android:preferenceCategoryStyle">@style/Preference.Category</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:textColor">#474747</item>
