--- a/app/src/main/res/layout/hot_comment_item.xml
+++ b/app/src/main/res/layout/hot_comment_item.xml
@@ -47,10 +47,22 @@
         android:paddingLeft="2dp"
         android:paddingRight="2dp"
         android:text="comment"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:layout_below="@+id/comment_image"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="1dp"/>
+
+    <TextView
+        style="@style/SubText"
+        android:id="@+id/news_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:ellipsize="end"
+        android:layout_below="@+id/comment_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 </com.ywwxhz.hoderview.NewsHotCommentItemHoderView>
