1. reduce UI fonts size. 2. resign news detail UI. 3. enable comment report function. 4. add swipe back function. it can disable in settings. 5. fix pass back app crash when playing fullscreen video.

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -35,6 +35,10 @@
             android:key="@string/pref_debug_key"
             android:title="@string/pref_debug_title"
             android:summary="@string/pref_debug_summary"/>
+        <CheckBoxPreference android:defaultValue="true"
+                            android:key="@string/pref_swipeback_key"
+                            android:title="@string/pref_swipeback_title"
+                            android:summary="@string/pref_swipeback_summary"/>
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="@string/pref_hardware_accelerated_key"
