--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/content"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <WebView
         android:id="@+id/webview"
@@ -41,4 +38,4 @@
         android:src="@mipmap/ic_comment"
         app:fab_colorNormal="@color/color_normal"
         app:fab_colorPressed="@color/color_passed" />
-</FrameLayout>
+</merge>
