--- a/app/src/main/res/layout/news_comment_item.xml
+++ b/app/src/main/res/layout/news_comment_item.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.ywwxhz.hoderview.NewsCommentItemHoderView xmlns:android="http://schemas.android.com/apk/res/android"
-                                           android:layout_width="fill_parent"
-                                           android:layout_height="fill_parent"
-                                           android:background="@drawable/list_item_background"
-                                           android:padding="8dp">
+                                               xmlns:tools="http://schemas.android.com/tools"
+                                               android:layout_width="fill_parent"
+                                               android:layout_height="fill_parent"
+                                               android:background="@drawable/list_item_background"
+                                               tools:ignore="ContentDescription"
+                                               android:padding="10dp">
 
     <ImageView
         android:id="@+id/comment_image"
         android:layout_width="38sp"
         android:layout_height="38sp"
-        android:layout_marginRight="3dp"
-        android:layout_marginBottom="3dp"/>
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="5dp"/>
 
     <TextView
         android:id="@+id/comment_name"
@@ -62,8 +64,7 @@
         android:layout_below="@+id/comment_image"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"/>
+        android:layout_marginBottom="4dp"/>
 
     <TextView
         android:id="@+id/comment_content"
@@ -77,7 +78,7 @@
         android:layout_below="@+id/comment_ref"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="1dp"/>
+        android:layout_marginBottom="2dp"/>
 
     <TextView
         style="@style/SubText"
