--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
+       tools:ignore="ContentDescription"
        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.ywwxhz.widget.ExtImageView
@@ -16,17 +18,15 @@
         android:layout_below="@id/news_image_large"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="3dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="3dp">
+        android:padding="8dp">
 
         <TextView
             android:id="@+id/news_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/title_color"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:paddingBottom="2dp"/>
 
         <TextView
             style="@style/SubText"
@@ -68,16 +68,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/news_time"
+            android:paddingTop="4dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/news_image_small"
-                android:layout_width="65sp"
-                android:layout_height="65sp"
+                android:layout_width="60sp"
+                android:layout_height="60sp"
                 android:layout_gravity="center_vertical"
                 android:visibility="gone"
                 android:layout_marginBottom="2dp"
-                android:layout_marginRight="3dp"
+                android:layout_marginRight="5dp"
                 android:layout_marginTop="2dp"
                 android:scaleType="centerCrop"/>
 
@@ -88,7 +89,7 @@
                 android:maxLines="4"
                 android:ellipsize="end"
                 android:lineSpacingExtra="0.5dp"
-                android:textSize="14sp"/>
+                android:textSize="13sp"/>
         </LinearLayout>
     </RelativeLayout>
 
