--- a/app/src/main/res/menu/menu_comment.xml
+++ b/app/src/main/res/menu/menu_comment.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/comment_support"
+    <item
+        android:id="@+id/comment_support"
         android:title="支持"/>
-    <item android:id="@+id/comment_against"
+    <item
+        android:id="@+id/comment_against"
         android:title="反对"/>
-    <item android:id="@+id/comment_report"
+    <item
+        android:id="@+id/comment_replay"
+        android:title="回复"/>
+    <item
+        android:id="@+id/comment_report"
         android:title="举报"/>
 </menu>
