--- a/app/src/main/res/menu/menu_comment_list.xml
+++ b/app/src/main/res/menu/menu_comment_list.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:title="评论反转"
         android:id="@+id/menu_reverse"/>
+    <item android:title="热门评论"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_hot_comment"
+        android:id="@+id/menu_hot_comment"/>
 </menu>
