--- a/app/src/main/res/layout/favorite_list_item.xml
+++ b/app/src/main/res/layout/favorite_list_item.xml
@@ -1,24 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:background="?cardBackground"
-              android:padding="10dp"
-              android:layout_height="wrap_content">
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="60sp"
-        android:layout_gravity="center_vertical"
-        android:layout_height="60sp"/>
-    <TextView
-        android:id="@+id/title"
-        android:textColor="?attr/titleColor"
-        android:layout_width="match_parent"
-        android:paddingLeft="5dp"
-        android:textSize="19sp"
-        android:paddingRight="5dp"
-        android:gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:lines="3"/>
+<com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:background="?cardBackground"
+    android:padding="10dp"
+    app:mrl_rippleOverlay="true"
+    android:layout_height="wrap_content">
 
-</LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="60sp"
+            android:layout_gravity="center_vertical"
+            android:layout_height="60sp" />
+
+        <TextView
+            android:id="@+id/title"
+            android:textColor="?attr/titleColor"
+            android:layout_width="match_parent"
+            android:paddingLeft="5dp"
+            android:textSize="19sp"
+            android:paddingRight="5dp"
+            android:gravity="center_vertical"
+            android:layout_height="wrap_content"
+            android:lines="3" />
+
+    </LinearLayout>
+</com.balysv.materialripple.MaterialRippleLayout>
