--- a/app/src/main/res/layout/news_comment_item.xml
+++ b/app/src/main/res/layout/news_comment_item.xml
@@ -1,125 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.ywwxhz.hoderview.NewsCommentItemHoderView xmlns:android="http://schemas.android.com/apk/res/android"
-                                               xmlns:tools="http://schemas.android.com/tools"
-                                               android:layout_width="fill_parent"
-                                               android:layout_height="fill_parent"
-                                               android:background="?cardBackground"
-                                               tools:ignore="ContentDescription"
-                                               android:padding="10dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="?cardBackground"
+    tools:ignore="ContentDescription"
+    app:mrl_rippleOverlay="true"
+    android:padding="10dp">
 
-    <ImageView
-        android:id="@+id/comment_image"
-        android:layout_width="38sp"
-        android:layout_height="38sp"
-        android:layout_marginRight="6dp"
-        android:layout_marginBottom="5dp"/>
-
-    <TextView
-        android:id="@+id/comment_name"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:textColor="?attr/titleColor"
-        android:layout_toLeftOf="@+id/comment_more"
-        android:textSize="17sp"
-        android:layout_toRightOf="@+id/comment_image"
-        android:layout_toEndOf="@+id/comment_image"
-        android:layout_marginRight="2dp"/>
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/comment_from"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:text="from"
-        android:textColor="?attr/subTitleColor"
-        android:textSize="12sp"
-        android:layout_below="@+id/comment_name"
-        android:layout_alignRight="@+id/comment_name"
-        android:layout_alignEnd="@+id/comment_name"
-        android:layout_marginBottom="2dp"
-        android:layout_alignLeft="@+id/comment_name"
-        />
+        <ImageView
+            android:id="@+id/comment_image"
+            android:layout_width="38sp"
+            android:layout_height="38sp"
+            android:layout_marginRight="6dp"
+            android:layout_marginBottom="5dp" />
 
-    <ImageView
-        android:id="@+id/comment_more"
-        android:layout_width="30sp"
-        android:layout_height="30sp"
-        android:background="?android:attr/listChoiceBackgroundIndicator"
-        android:src="@drawable/ic_more"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/comment_reason"
-        android:layout_alignEnd="@+id/comment_reason"/>
+        <TextView
+            android:id="@+id/comment_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="?attr/titleColor"
+            android:layout_toLeftOf="@+id/comment_more"
+            android:textSize="17sp"
+            android:layout_toRightOf="@+id/comment_image"
+            android:layout_toEndOf="@+id/comment_image"
+            android:layout_marginRight="2dp" />
 
-    <TextView
-        android:id="@+id/comment_ref"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/refBackground"
-        android:lineSpacingExtra="1dp"
-        android:padding="4dp"
-        android:textSize="14sp"
-        android:layout_below="@+id/comment_image"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="4dp"/>
+        <TextView
+            android:id="@+id/comment_from"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:text="from"
+            android:textColor="?attr/subTitleColor"
+            android:textSize="12sp"
+            android:layout_below="@+id/comment_name"
+            android:layout_alignRight="@+id/comment_name"
+            android:layout_alignEnd="@+id/comment_name"
+            android:layout_marginBottom="2dp"
+            android:layout_alignLeft="@+id/comment_name" />
 
-    <TextView
-        android:id="@+id/comment_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:lineSpacingExtra="1dp"
-        android:paddingLeft="2dp"
-        android:paddingRight="2dp"
-        android:text="comment"
-        android:textSize="14sp"
-        android:layout_below="@+id/comment_ref"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="2dp"/>
+        <ImageView
+            android:id="@+id/comment_more"
+            android:layout_width="30sp"
+            android:layout_height="30sp"
+            android:background="?android:attr/listChoiceBackgroundIndicator"
+            android:src="@drawable/ic_more"
+            android:layout_alignParentTop="true"
+            android:layout_alignRight="@+id/comment_reason"
+            android:layout_alignEnd="@+id/comment_reason" />
 
-    <TextView
-        style="@style/SubText"
-        android:id="@+id/comment_time"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/comment_content"
-        android:layout_toLeftOf="@+id/comment_score"
-        android:layout_toStartOf="@+id/comment_score"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:text="time"/>
+        <TextView
+            android:id="@+id/comment_ref"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/refBackground"
+            android:lineSpacingExtra="1dp"
+            android:padding="4dp"
+            android:textSize="15sp"
+            android:layout_below="@+id/comment_image"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="4dp" />
 
-    <TextView
-        style="@style/SubText"
-        android:id="@+id/comment_reason"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@mipmap/ic_reason"
-        android:drawablePadding="5dp"
-        android:gravity="center"
-        android:minWidth="50sp"
-        android:text="999+"
-        android:layout_below="@+id/comment_content"
-        android:layout_alignRight="@+id/comment_content"
-        android:layout_alignEnd="@+id/comment_content"
-        android:layout_marginRight="2dp"/>
+        <TextView
+            android:id="@+id/comment_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lineSpacingExtra="1dp"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:text="comment"
+            android:textSize="15sp"
+            android:layout_below="@+id/comment_ref"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="2dp" />
 
-    <TextView
-        style="@style/SubText"
-        android:id="@+id/comment_score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@mipmap/ic_score"
-        android:drawablePadding="5dp"
-        android:gravity="center"
-        android:minWidth="50sp"
-        android:text="99+"
-        android:layout_alignTop="@+id/comment_reason"
-        android:layout_toLeftOf="@+id/comment_reason"
-        android:layout_toStartOf="@+id/comment_reason"
-        android:layout_marginRight="4dp"/>
+        <TextView
+            style="@style/SubText"
+            android:id="@+id/comment_time"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/comment_content"
+            android:layout_toLeftOf="@+id/comment_score"
+            android:layout_toStartOf="@+id/comment_score"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:text="time" />
+
+        <TextView
+            style="@style/SubText"
+            android:id="@+id/comment_reason"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@mipmap/ic_reason"
+            android:drawablePadding="5dp"
+            android:gravity="center"
+            android:minWidth="50sp"
+            android:text="999+"
+            android:layout_below="@+id/comment_content"
+            android:layout_alignRight="@+id/comment_content"
+            android:layout_alignEnd="@+id/comment_content"
+            android:layout_marginRight="2dp" />
+
+        <TextView
+            style="@style/SubText"
+            android:id="@+id/comment_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@mipmap/ic_score"
+            android:drawablePadding="5dp"
+            android:gravity="center"
+            android:minWidth="50sp"
+            android:text="99+"
+            android:layout_alignTop="@+id/comment_reason"
+            android:layout_toLeftOf="@+id/comment_reason"
+            android:layout_toStartOf="@+id/comment_reason"
+            android:layout_marginRight="4dp" />
+    </RelativeLayout>
 </com.ywwxhz.hoderview.NewsCommentItemHoderView>
