--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -1,97 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-       xmlns:tools="http://schemas.android.com/tools"
-       tools:ignore="ContentDescription"
-       xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <com.ywwxhz.widget.ExtImageView
-        android:id="@+id/news_image_large"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:visibility="gone"
-        app:ex_proportion="0.4"/>
-
+<com.ywwxhz.hoderview.NewsListItemHoderView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:mrl_rippleOverlay="true"
+    android:background="?cardBackground">
 
     <RelativeLayout
-        android:layout_below="@id/news_image_large"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/news_title"
+        <com.ywwxhz.widget.ExtImageView
+            android:id="@+id/news_image_large"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="?attr/titleColor"
-            android:textSize="20sp"
-            android:paddingBottom="2dp"/>
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            app:ex_proportion="0.4" />
 
-        <TextView
-            style="@style/SubText"
-            android:id="@+id/news_time"
-            android:layout_width="0dp"
+
+        <RelativeLayout
+            android:layout_below="@id/news_image_large"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/news_title"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_toLeftOf="@+id/news_comments"
-            android:layout_toStartOf="@+id/news_comments" />
-
-        <TextView
-            style="@style/SubText"
-            android:id="@+id/news_comments"
-            android:layout_width="52sp"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@mipmap/ic_comments"
-            android:drawablePadding="2dp"
-            android:gravity="center"
-            android:paddingRight="2dp"
-            android:layout_below="@+id/news_title"
-            android:layout_toLeftOf="@+id/news_views"
-            android:layout_toStartOf="@+id/news_views" />
-
-        <TextView
-            style="@style/SubText"
-            android:id="@+id/news_views"
-            android:layout_width="58sp"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@mipmap/ic_views"
-            android:drawablePadding="2dp"
-            android:gravity="center"
-            android:layout_below="@+id/news_title"
-            android:layout_alignRight="@+id/news_title"
-            android:layout_alignEnd="@+id/news_title" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/news_time"
-            android:paddingTop="4dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/news_image_small"
-                android:layout_width="60sp"
-                android:layout_height="60sp"
-                android:layout_gravity="center_vertical"
-                android:visibility="gone"
-                android:layout_marginBottom="2dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="2dp"
-                android:scaleType="centerCrop"/>
+            android:padding="8dp">
 
             <TextView
-                android:id="@+id/news_summary"
+                android:id="@+id/news_title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="?attr/titleColor"
+                android:textSize="20sp"
+                android:paddingBottom="2dp" />
+
+            <TextView
+                style="@style/SubText"
+                android:id="@+id/news_time"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/news_title"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_toLeftOf="@+id/news_comments"
+                android:layout_toStartOf="@+id/news_comments" />
+
+            <TextView
+                style="@style/SubText"
+                android:id="@+id/news_comments"
+                android:layout_width="52sp"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@mipmap/ic_comments"
+                android:drawablePadding="2dp"
+                android:gravity="center"
+                android:paddingRight="2dp"
+                android:layout_below="@+id/news_title"
+                android:layout_toLeftOf="@+id/news_views"
+                android:layout_toStartOf="@+id/news_views" />
+
+            <TextView
+                style="@style/SubText"
+                android:id="@+id/news_views"
+                android:layout_width="58sp"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@mipmap/ic_views"
+                android:drawablePadding="2dp"
+                android:gravity="center"
+                android:layout_below="@+id/news_title"
+                android:layout_alignRight="@+id/news_title"
+                android:layout_alignEnd="@+id/news_title" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLines="4"
-                android:ellipsize="end"
-                android:lineSpacingExtra="0.5dp"
-                android:textSize="13sp"/>
-        </LinearLayout>
+                android:layout_below="@id/news_time"
+                android:paddingTop="4dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/news_image_small"
+                    android:layout_width="60sp"
+                    android:layout_height="60sp"
+                    android:layout_gravity="center_vertical"
+                    android:visibility="gone"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="2dp"
+                    android:scaleType="centerCrop" />
+
+                <TextView
+                    android:id="@+id/news_summary"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="4"
+                    android:ellipsize="end"
+                    android:lineSpacingExtra="0.5dp"
+                    android:textSize="13sp" />
+            </LinearLayout>
+        </RelativeLayout>
     </RelativeLayout>
 
-
-</merge>
+</com.ywwxhz.hoderview.NewsListItemHoderView>
