--- a/app/src/main/res/layout/susbcribe_list_item.xml
+++ b/app/src/main/res/layout/susbcribe_list_item.xml
@@ -1,46 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.ywwxhz.hoderview.TopicItemView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?cardBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:focusable="false"
     android:clickable="false"
     android:gravity="center_vertical"
+    app:mrl_rippleOverlay="true"
     android:padding="15dp">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:id="@+id/title"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:layout_centerVertical="true"
-        android:textSize="18sp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:lines="2"
-        android:textColor="?attr/titleColor"
-        android:layout_toRightOf="@+id/image"
-        android:layout_toLeftOf="@+id/action"
-        android:layout_toStartOf="@+id/action" />
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/action"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:focusable="false"
-        android:textSize="15sp"
-        android:minHeight="35sp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_centerVertical="true"
+            android:textSize="18sp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:lines="2"
+            android:textColor="?attr/titleColor"
+            android:layout_toRightOf="@+id/image"
+            android:layout_toLeftOf="@+id/action"
+            android:layout_toStartOf="@+id/action" />
+
+        <Button
+            android:id="@+id/action"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:focusable="false"
+            android:textSize="15sp"
+            android:minHeight="35sp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
 
 </com.ywwxhz.hoderview.TopicItemView>
