--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -18,4 +18,6 @@
     <attr name="refBackground" format="color|reference"/>
     <attr name="titleColor" format="color|reference"/>
     <attr name="subTitleColor" format="color|reference"/>
+    <attr name="toolbarTheme"  format="reference"/>
+    <attr name="toolbarPopupTheme"  format="reference"/>
 </resources>
