add new design detail Activity

--- a/app/src/main/res/layout/favorite_list_item.xml
+++ b/app/src/main/res/layout/favorite_list_item.xml
@@ -5,6 +5,7 @@
     android:background="?cardBackground"
     android:padding="10dp"
     app:mrl_rippleOverlay="true"
+    app:mrl_rippleInAdapter="true"
     android:layout_height="wrap_content">
 
     <LinearLayout
