--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:mrl_rippleOverlay="true"
+    app:mrl_rippleInAdapter="true"
     android:background="?cardBackground">
 
     <LinearLayout
