--- a/app/src/main/res/layout/activity_basetoolbar.xml
+++ b/app/src/main/res/layout/activity_basetoolbar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -8,20 +9,18 @@
         android:id="@+id/statusView"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
-    <FrameLayout
-        android:id="@+id/content"
-        android:layout_below="@id/statusView"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_below="@id/statusView"
         android:layout_width="match_parent"
         android:background="?attr/colorPrimary"
         android:layout_height="?attr/actionBarSize"
         app:theme="?toolbarTheme"
         app:popupTheme="?toolbarPopupTheme"/>
+    <FrameLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-</RelativeLayout>
+
+
+</LinearLayout>
