--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-       xmlns:app="http://schemas.android.com/apk/res-auto">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 
     <WebView
         android:id="@+id/webview"
@@ -38,4 +40,4 @@
         android:src="@mipmap/ic_comment"
         app:fab_colorNormal="?colorPrimary"
         app:fab_colorPressed="?colorPrimaryDark"/>
-</merge>
+</FrameLayout>
