--- a/app/src/main/res/layout/fragment_susbcribe_host.xml
+++ b/app/src/main/res/layout/fragment_susbcribe_host.xml
@@ -10,10 +10,7 @@
         android:layout_height="48dp"
         android:background="?attr/colorPrimary"/>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <include layout="@layout/pager_layout"/>
 
 
 </LinearLayout>
