--- a/app/src/main/res/layout/news_comment_item.xml
+++ b/app/src/main/res/layout/news_comment_item.xml
@@ -7,6 +7,7 @@
     android:background="?cardBackground"
     tools:ignore="ContentDescription"
     app:mrl_rippleOverlay="true"
+    app:mrl_rippleInAdapter="true"
     android:padding="10dp">
 
     <RelativeLayout
