--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_reflush"
         android:title="@string/menu_reflush"/>
@@ -8,6 +9,8 @@
         android:title="@string/menu_book_mark"/>
     <item
         android:id="@+id/menu_share"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_share"
         android:title="@string/menu_share"/>
     <item
         android:id="@+id/menu_font_size"
