1.replace photoview to subscaleview 2.add gif support 3.update gradle plugin to 1.2.3 and gradle wrapper to 2.4 4.change detail web Template. Moving css javascript to assets folder

--- a/app/src/main/res/layout/paged_foot.xml
+++ b/app/src/main/res/layout/paged_foot.xml
@@ -29,6 +29,7 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:visibility="gone"
+        app:barColor="?titleColor"
         app:barWidth="2dp"
         app:rimWidth="2dp" />
 
