--- a/app/src/main/res/layout/activity_imageview.xml
+++ b/app/src/main/res/layout/activity_imageview.xml
@@ -1,10 +1,7 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.ywwxhz.widget.FixViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <include layout="@layout/pager_layout"/>
 
     <TextView
         android:id="@+id/image_num"
