--- a/app/src/main/res/layout/news_comment_item.xml
+++ b/app/src/main/res/layout/news_comment_item.xml
@@ -52,7 +52,7 @@
             android:id="@+id/comment_more"
             android:layout_width="30sp"
             android:layout_height="30sp"
-            android:background="?android:attr/listChoiceBackgroundIndicator"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/ic_more"
             android:layout_alignParentTop="true"
             android:layout_alignRight="@+id/comment_reason"
