--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -37,6 +37,11 @@
             android:title="@string/pref_show_detail_image_title"
             android:summary="@string/pref_show_detail_image_summary" />
         <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="@string/pref_preload_image_key"
+            android:title="@string/pref_preload_image_title"
+            android:summary="@string/pref_preload_image_summary" />
+        <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_offline_image_key"
             android:title="@string/pref_offline_image_title"
