--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="statusColor">#11659a</color>
     <color name="toolbarColor">#1473af</color>
     <color name="green_1">#307351</color>
+    <color name="background_light">#eeeeee</color>
     <color name="background_night">#202733</color>
     <color name="gray_80">#CC000000</color>
     <color name="textColor" >#474747</color>
