--- a/app/src/main/res/values/styles_basic.xml
+++ b/app/src/main/res/values/styles_basic.xml
@@ -12,6 +12,7 @@
         <item name="textSelectColor">?colorPrimary</item>
         <item name="actionModeBackground">?colorPrimary</item>
         <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@color/background_light</item>
         <item name="android:preferenceCategoryStyle">@style/Preference.Category</item>
         <item name="actionBarPopupTheme">@style/ThemeOverlay.AppCompat</item>
         <item name="android:windowIsTranslucent">true</item>
