--- a/app/src/main/res/layout/drawer_head_layout.xml
+++ b/app/src/main/res/layout/drawer_head_layout.xml
@@ -7,6 +7,6 @@
         android:src="?attr/colorPrimary"
         android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="180dp"/>
+        android:layout_height="@dimen/drawer_header_height"/>
 
 </LinearLayout>
